@@ -34,6 +34,19 @@ public interface RandomAccessInput {
    * @see DataInput#readByte
    */
   public byte readByte(long pos) throws IOException;
+
+  /**
+   * Reads a specified number of bytes starting at a given position into an array at the specified
+   * offset.
+   *
+   * @see DataInput#readBytes
+   */
+  default void readBytes(long pos, byte[] bytes, int offset, int length) throws IOException {
+    for (int i = 0; i < length; i++) {
+      bytes[offset + i] = readByte(pos + i);
+    }
+  }
+
   /**
    * Reads a short (LE byte order) at the given position in the file
    *
